@@ -21,32 +21,12 @@ pipeline {
             }
         }
 
-        stage('Análise Sonar') {
-            environment {
-                scannerHome = tool 'SONAR_SCANNER'
-                SONAR_SCANNER_OPTS = '--add-opens java.base/java.lang=ALL-UNNAMED'
-            }
-            steps {
-                withSonarQubeEnv('SONAR_LOCAL') {
-                    bat "\"%scannerHome%\\bin\\sonar-scanner\" -e -Dsonar.projectKey=Analise_parkApi -Dsonar.host.url=http://localhost:9000 -Dsonar.login=843f351375288e659cf7c6348fbab3afc3b748d2 -Dsonar.java.binaries=target -Dsonar.coverage.exclusions=**/.mvn/**,**/src/test/**,**/model/**,**/application.java"
-                }
-            }
-        }
-
-        stage('Quality Gate') {
-            steps {
-                sleep(50)
-                timeout(time: 1, unit: 'MINUTES') {
-                    waitForQualityGate abortPipeline: true
-                }
-            }
-        }
-
         stage('Build Docker Image') {
             steps {
                 script {
                     echo "Construindo imagem: ${IMAGE_NAME}:${BUILD_NUMBER}"
-                    docker.build("${IMAGE_NAME}:${BUILD_NUMBER}", "--file Dockerfile .")
+                    def image = docker.build("${IMAGE_NAME}:${BUILD_NUMBER}", "--file Dockerfile .")
+                    bat "docker images | findstr park_api"
                 }
             }
         }
